# env-mcp-demo

./: README.md  start.sh
agent_server_demo/: setup.sh
agent_server_demo/hello_world/channel/: README.md  pyproject.toml
agent_server_demo/hello_world/channel/env_channel/client/: decorators.py
agent_server_demo/hello_world/src/: main.py
channel/: .gitignore
channel_mcp_demo/: mcp_config.json  setup.sh
channel_mcp_demo/hello_world/: pyproject.toml
channel_mcp_demo/hello_world/channel/: pyproject.toml
channel_mcp_demo/hello_world/channel/env_channel/client/: decorators.py  publisher.py  subscriber.py
channel_mcp_demo/hello_world/channel/env_channel/server/: channel_server.py
channel_mcp_demo/hello_world/channel/examples/: full_example.py  server_example.py
channel_mcp_demo/hello_world/src/: main.py  test.py
http_mcp_demo/: mcp_config.json  setup.sh  start.sh
http_mcp_demo/hello_world/: pyproject.toml
http_mcp_demo/hello_world/channel/env_channel/: __init__.py
http_mcp_demo/hello_world/channel/env_channel/client/: subscriber.py
http_mcp_demo/hello_world/channel/env_channel/server/: channel_server.py  connection_manager.py  main.py
http_mcp_demo/hello_world/channel/examples/: minimal_demo.py  publisher_example.py  subscriber_example.py
http_mcp_demo/hello_world/channel/examples/demo/: publisher.py  server.py  subscriber.py  subscriber_decorator.py
http_mcp_demo/hello_world/src/: main.py
stdio_mcp_demo/: mcp_config.json
stdio_mcp_demo/hello_world/src/: main.py
stdio_server_demo/: setup.sh
