[project]
name = "channel-world-server"
version = "0.1.0"
description = "channel World MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp~=2.11.3",
    "fastapi[standard]>=0.100.0",
    "env-channel",
]

[tool.uv.sources]
env-channel = { path = "./channel", editable = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

